--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 05:05:10 2018</p>
+         Last Run: Thu Jul 19 06:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -30,11 +30,11 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>52</td>
-                        <td>54</td>
+                        <td>Overcast</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>24</td>
+                        <td>53</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SSE</td>
@@ -42,11 +42,11 @@
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>40</td>
-                        <td>54</td>
+                        <td>16</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SE</td>
@@ -54,27 +54,27 @@
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>33</td>
+                        <td>15</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>71</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>20</td>
-                        <td>56</td>
+                        <td>17</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ENE</td>
-                        <td>64</td>
+                        <td>E</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,7 +119,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "22",
                  "22",
                  "22",
                  "21"
@@ -131,7 +131,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "22",
                  "22",
                  "22",
                  "21"
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "52",
-                 "40",
-                 "33",
-                 "20"
+                 "24",
+                 "16",
+                 "15",
+                 "17"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "54",
+                 "53",
+                 "53",
                  "52",
-                 "56"
+                 "54"
                ]
              },
              {
@@ -210,8 +210,8 @@
                "data":[
                  "80",
                  "78",
-                 "71",
-                 "64"
+                 "64",
+                 "59"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 05:05:10 2018</p>
+         Last Run: Thu Jul 19 06:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -250,10 +250,10 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -265,22 +265,22 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>4</td>
                         <td>10</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>7</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>2</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>8</td>
                      </tr>
                      <tr>
@@ -351,9 +351,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
+                 "16",
                  "18",
-                 "19",
+                 "20",
                  "20",
                  "21"
                ]
@@ -364,9 +364,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
+                 "16",
                  "18",
-                 "19",
+                 "20",
                  "20",
                  "21"
                ]
@@ -433,9 +433,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "37",
-                 "32",
+                 "45",
+                 "38",
+                 "33",
                  "29",
                  "27"
                ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 05:05:11 2018</p>
+         Last Run: Thu Jul 19 06:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -491,11 +491,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>14</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -507,7 +507,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>13</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -515,11 +515,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>3</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>13</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -637,9 +637,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
+                 "35",
                  "40",
-                 "48"
+                 "47"
                ]
              },
              {
@@ -647,9 +647,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
-                 "13",
-                 "13"
+                 "17",
+                 "19",
+                 "22"
                ]
              }
            ]
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 05:05:11 2018</p>
+         Last Run: Thu Jul 19 06:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -688,10 +688,10 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>3</td>
-                        <td>31</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>0</td>
+                        <td>34</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -700,25 +700,25 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>4</td>
-                        <td>34</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>SE</td>
+                        <td>37</td>
+                        <td>1</td>
+                        <td>13</td>
+                        <td>SSE</td>
                         <td>42</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>5</td>
-                        <td>38</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>1</td>
+                        <td>41</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>ESE</td>
+                        <td>13</td>
+                        <td>SE</td>
                         <td>37</td>
                      </tr>
                      <tr>
@@ -726,11 +726,11 @@
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>9</td>
-                        <td>45</td>
+                        <td>7</td>
+                        <td>47</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>E</td>
+                        <td>13</td>
+                        <td>ESE</td>
                         <td>31</td>
                      </tr>
                      <tr>
@@ -738,12 +738,12 @@
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>10</td>
+                        <td>7</td>
                         <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>29</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -789,9 +789,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "26",
                  "25",
                  "24",
+                 "23",
                  "21",
                  "19"
                ]
@@ -802,9 +802,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "26",
                  "25",
                  "24",
+                 "23",
                  "21",
                  "19"
                ]
@@ -859,11 +859,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "4",
-                 "5",
-                 "9",
-                 "10"
+                 "0",
+                 "1",
+                 "1",
+                 "7",
+                 "7"
                ]
              },
              {
@@ -871,10 +871,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
                  "34",
-                 "38",
-                 "45",
+                 "37",
+                 "41",
+                 "47",
                  "54"
                ]
              },
@@ -887,7 +887,7 @@
                  "42",
                  "37",
                  "31",
-                 "29"
+                 "25"
                ]
              }
            ]
