--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 06:05:11 2018</p>
+         Last Run: Thu Jul 19 07:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -30,22 +30,22 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Overcast</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>24</td>
-                        <td>53</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>37</td>
+                        <td>54</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>80</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>16</td>
+                        <td>24</td>
                         <td>53</td>
                         <td>1</td>
                         <td>10</td>
@@ -60,17 +60,17 @@
                         <td>15</td>
                         <td>52</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>ESE</td>
-                        <td>64</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>17</td>
-                        <td>54</td>
+                        <td>8</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
@@ -119,7 +119,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "21",
                  "22",
                  "22",
                  "21"
@@ -131,7 +131,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "21",
                  "22",
                  "22",
                  "21"
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "37",
                  "24",
-                 "16",
                  "15",
-                 "17"
+                 "8"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
+                 "54",
                  "53",
                  "52",
-                 "54"
+                 "56"
                ]
              },
              {
@@ -208,9 +208,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
+                 "85",
                  "78",
-                 "64",
+                 "68",
                  "59"
                ]
              }
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 06:05:11 2018</p>
+         Last Run: Thu Jul 19 07:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,11 +253,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>3</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -269,19 +269,19 @@
                         <td>4</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>2</td>
-                        <td>33</td>
+                        <td>1</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -293,7 +293,7 @@
                         <td>7</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>38</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -301,7 +301,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
@@ -423,7 +423,7 @@
                "data":[
                  "0",
                  "0",
-                 "2",
+                 "1",
                  "15",
                  "15"
                ]
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
+                 "44",
                  "38",
-                 "33",
+                 "32",
                  "29",
-                 "27"
+                 "26"
                ]
              },
              {
@@ -445,10 +445,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "5",
                  "6",
-                 "7",
-                 "8",
-                 "38",
+                 "9",
+                 "39",
                  "42"
                ]
              }
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 06:05:11 2018</p>
+         Last Run: Thu Jul 19 07:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -495,7 +495,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>17</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -503,19 +503,19 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>3</td>
-                        <td>47</td>
+                        <td>2</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -629,7 +629,7 @@
                "data":[
                  "0",
                  "0",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -638,8 +638,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "35",
-                 "40",
-                 "47"
+                 "39",
+                 "46"
                ]
              },
              {
@@ -647,8 +647,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "19",
+                 "15",
+                 "18",
                  "22"
                ]
              }
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 06:05:11 2018</p>
+         Last Run: Thu Jul 19 07:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -690,10 +690,10 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>0</td>
+                        <td>2</td>
                         <td>34</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>45</td>
                      </tr>
@@ -702,44 +702,44 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>1</td>
+                        <td>3</td>
                         <td>37</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>42</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>1</td>
+                        <td>4</td>
                         <td>41</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>37</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>7</td>
+                        <td>8</td>
                         <td>47</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>31</td>
+                        <td>E</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>7</td>
-                        <td>54</td>
+                        <td>9</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -859,11 +859,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "1",
-                 "1",
-                 "7",
-                 "7"
+                 "2",
+                 "3",
+                 "4",
+                 "8",
+                 "9"
                ]
              },
              {
@@ -875,7 +875,7 @@
                  "37",
                  "41",
                  "47",
-                 "54"
+                 "55"
                ]
              },
              {
@@ -884,9 +884,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "45",
-                 "42",
-                 "37",
-                 "31",
+                 "41",
+                 "35",
+                 "30",
                  "25"
                ]
              }
