--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 08:05:03 2018</p>
+         Last Run: Thu Jul 19 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>36</td>
-                        <td>54</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>31</td>
+                        <td>51</td>
                         <td>2</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSE</td>
-                        <td>84</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -46,35 +46,35 @@
                         <td>22</td>
                         <td>22</td>
                         <td>24</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>SE</td>
+                        <td>11</td>
+                        <td>SSE</td>
                         <td>78</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
                         <td>15</td>
-                        <td>52</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>68</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>9</td>
-                        <td>55</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>3</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>60</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,10 +119,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
                  "22",
                  "22",
-                 "21"
+                 "22",
+                 "22"
                ]
              },
              {
@@ -131,10 +131,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
                  "22",
                  "22",
-                 "21"
+                 "22",
+                 "22"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "36",
+                 "31",
                  "24",
                  "15",
-                 "9"
+                 "3"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "53",
+                 "51",
                  "52",
-                 "55"
+                 "50",
+                 "50"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "84",
+                 "76",
                  "78",
-                 "68",
-                 "60"
+                 "57",
+                 "61"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 08:05:03 2018</p>
+         Last Run: Thu Jul 19 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,11 +253,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>3</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>5</td>
+                        <td>SW</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -269,19 +269,19 @@
                         <td>4</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>1</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>9</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -289,11 +289,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>7</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>39</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -301,11 +301,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>26</td>
+                        <td>28</td>
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                   </tbody>
                </table>
@@ -353,7 +353,7 @@
                "data":[
                  "16",
                  "18",
-                 "20",
+                 "19",
                  "20",
                  "21"
                ]
@@ -366,7 +366,7 @@
                "data":[
                  "16",
                  "18",
-                 "20",
+                 "19",
                  "20",
                  "21"
                ]
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "45",
                  "38",
-                 "32",
-                 "29",
-                 "26"
+                 "33",
+                 "30",
+                 "28"
                ]
              },
              {
@@ -445,11 +445,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
                  "6",
-                 "9",
-                 "39",
-                 "42"
+                 "5",
+                 "7",
+                 "38",
+                 "43"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 08:05:03 2018</p>
+         Last Run: Thu Jul 19 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -507,14 +507,14 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>46</td>
                         <td>0</td>
                         <td>13</td>
@@ -629,7 +629,7 @@
                "data":[
                  "0",
                  "0",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -648,7 +648,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "19",
+                 "18",
                  "22"
                ]
              }
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 08:05:03 2018</p>
+         Last Run: Thu Jul 19 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -695,7 +695,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -719,7 +719,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -731,7 +731,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>31</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -883,10 +883,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
+                 "45",
                  "41",
-                 "36",
-                 "31",
+                 "35",
+                 "30",
                  "25"
                ]
              }
