--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 09:05:03 2018</p>
+         Last Run: Thu Jul 19 10:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,48 +33,48 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>31</td>
-                        <td>51</td>
+                        <td>40</td>
+                        <td>53</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>76</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>24</td>
-                        <td>52</td>
+                        <td>19</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>78</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>Mostly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
-                        <td>50</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>ESE</td>
-                        <td>57</td>
+                        <td>13</td>
+                        <td>SE</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>3</td>
-                        <td>50</td>
+                        <td>Partly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>8</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>E</td>
-                        <td>61</td>
+                        <td>11</td>
+                        <td>ESE</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,8 +121,8 @@
                "data":[
                  "22",
                  "22",
-                 "22",
-                 "22"
+                 "21",
+                 "21"
                ]
              },
              {
@@ -133,8 +133,8 @@
                "data":[
                  "22",
                  "22",
-                 "22",
-                 "22"
+                 "21",
+                 "21"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "31",
-                 "24",
+                 "40",
+                 "19",
                  "15",
-                 "3"
+                 "8"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "52",
-                 "50",
-                 "50"
+                 "53",
+                 "53",
+                 "53",
+                 "55"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "78",
-                 "57",
-                 "61"
+                 "86",
+                 "83",
+                 "71",
+                 "50"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 09:05:03 2018</p>
+         Last Run: Thu Jul 19 10:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -250,14 +250,14 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>3</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -268,20 +268,20 @@
                         <td>38</td>
                         <td>4</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>5</td>
+                        <td>SW</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>1</td>
-                        <td>33</td>
+                        <td>0</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -289,11 +289,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>38</td>
+                        <td>WSW</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -301,11 +301,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -351,7 +351,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
+                 "17",
                  "18",
                  "19",
                  "20",
@@ -364,7 +364,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
+                 "17",
                  "18",
                  "19",
                  "20",
@@ -423,7 +423,7 @@
                "data":[
                  "0",
                  "0",
-                 "1",
+                 "0",
                  "15",
                  "15"
                ]
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
+                 "44",
                  "38",
-                 "33",
-                 "30",
-                 "28"
+                 "32",
+                 "29",
+                 "27"
                ]
              },
              {
@@ -445,11 +445,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
                  "5",
-                 "7",
-                 "38",
-                 "43"
+                 "4",
+                 "3",
+                 "35",
+                 "40"
                ]
              }
            ]
@@ -466,7 +466,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 09:05:03 2018</p>
+         Last Run: Thu Jul 19 10:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -666,7 +666,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 09:05:03 2018</p>
+         Last Run: Thu Jul 19 10:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
