--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 16:05:04 2018</p>
+         Last Run: Thu Jul 19 17:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -29,40 +29,28 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>05:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>52</td>
-                        <td>43</td>
-                        <td>2</td>
-                        <td>18</td>
-                        <td>SSE</td>
-                        <td>83</td>
-                     </tr>
-                     <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>47</td>
-                        <td>43</td>
+                        <td>39</td>
+                        <td>46</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SSE</td>
-                        <td>80</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>21</td>
-                        <td>43</td>
+                        <td>21</td>
+                        <td>39</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>69</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -72,7 +60,7 @@
                         <td>12</td>
                         <td>51</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
                         <td>57</td>
                      </tr>
@@ -107,7 +95,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "05:00 PM",
              "06:00 PM",
              "07:00 PM",
              "08:00 PM"
@@ -119,9 +106,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
                  "22",
-                 "22",
+                 "21",
                  "21"
                ]
              },
@@ -131,9 +117,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
                  "22",
-                 "22",
+                 "21",
                  "21"
                ]
              }
@@ -175,7 +160,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "05:00 PM",
              "06:00 PM",
              "07:00 PM",
              "08:00 PM"
@@ -186,9 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "52",
-                 "47",
-                 "21",
+                 "39",
+                 "39",
                  "12"
                ]
              },
@@ -197,9 +180,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "43",
-                 "43",
+                 "46",
+                 "47",
                  "51"
                ]
              },
@@ -208,9 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "83",
-                 "80",
-                 "69",
+                 "76",
+                 "71",
                  "57"
                ]
              }
@@ -229,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 16:05:04 2018</p>
+         Last Run: Thu Jul 19 17:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -467,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 16:05:04 2018</p>
+         Last Run: Thu Jul 19 17:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -489,14 +470,14 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>25</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -504,11 +485,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -519,8 +500,8 @@
                         <td>45</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>10</td>
+                        <td>ESE</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -564,7 +545,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "23",
+                 "22",
                  "21",
                  "19"
                ]
@@ -575,7 +556,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "23",
+                 "22",
                  "21",
                  "19"
                ]
@@ -638,8 +619,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "33",
-                 "37",
+                 "34",
+                 "38",
                  "45"
                ]
              },
@@ -648,9 +629,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "25",
-                 "15",
-                 "10"
+                 "23",
+                 "16",
+                 "11"
                ]
              }
            ]
@@ -667,7 +648,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 16:05:04 2018</p>
+         Last Run: Thu Jul 19 17:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
